adding more stuff
增加更多东西...

--- a/conf/app.ini
+++ b/conf/app.ini
@@ -3,3 +3,9 @@
 application.directory=APP_PATH "/app/" MODULE
 
 ;application.modules=Index,Bucket,Video
+
+[mongodb]
+host = 10.96.141.45:27017
+user = 
+pass = 
+db   = 
