adding with git shell

--- a/conf/app.ini
+++ b/conf/app.ini
@@ -1,8 +1,13 @@
 [product]
 ;支持直接写PHP中的已定义常量
-application.directory=APP_PATH "/app/" MODULE
+application.directory = APP_PATH "/app/" MODULE
+application.library   = APP_PATH "/phplib/"
 
 ;application.modules=Index,Bucket,Video
+
+[dev]
+application.directory = APP_PATH "/app/" MODULE
+application.library   = APP_PATH "/phplib/"
 
 [mongodb]
 host = 10.96.141.45:27017
