--- a/conf/app.ini
+++ b/conf/app.ini
@@ -1,6 +1,6 @@
 [product]
 ;支持直接写PHP中的已定义常量
-application.directory = ROOT_PATH "/app/" MODULE
+application.directory = ROOT_PATH "/app/"
 application.library   = ROOT_PATH "/phplib/"
 
 ;application.modules=Index,Bucket,Video
