--- a/conf/app.ini
+++ b/conf/app.ini
@@ -6,7 +6,7 @@ application.library   = ROOT_PATH "/phplib/"
 ;application.modules=Index,Bucket,Video
 
 [dev]
-application.directory = ROOT_PATH "/app/" MODULE
+application.directory = ROOT_PATH "/app/"
 application.library   = ROOT_PATH "/phplib/"
 
 [mongodb]
