functional without mongo

--- a/conf/mongodb.ini
+++ b/conf/mongodb.ini
@@ -4,6 +4,6 @@ user =
 pass = 
 db   = storage
 
-chunksize = 15728640
-;option.replicaSet = rs1
+; chunksize = 15728640
+; option.replicaSet = rs1
 option.connectTimeoutMS = 1000
