adding very simple auth

--- a/conf/mongodb.ini
+++ b/conf/mongodb.ini
@@ -5,34 +5,13 @@ pass =
 db   = storage
 
 chunksize = 15728640
-;option.replicaSet = rs1
 option.connectTimeoutMS = 1000
-
-[xhprof: product]
-host = "10.96.141.78:28011,10.96.141.79:28011"
-db = log
-
-[visitlog: product]
-host = "10.96.141.78:28011,10.96.141.79:28011"
-db = visitlog
-
-[log : product]
-host = "10.96.141.78:28011,10.96.141.79:28011"
-db = log
-collection = log
-server = 0001
-option.w = 0
 
 [0001 : product]
 host = "10.96.141.81:27017,10.96.141.81:37017"
 db = storage
 collection = image
 server = 0001
-
-
-[oldimage : 0001]
-collection = image
-servers = 0001
 
 [storage : 0001]
 collection = file
@@ -41,25 +20,9 @@ collection = file
 collection = image
 servers = 0001
 
-[video : 0001]
+[video : product]
 collection = video
-servers = 0001
 
 [file : 0001]
 collection = file
 servers = 0001
-
-[oms]
-host = 10.96.141.86:27017
-user = xww
-pass = xww
-db   = pvlog
-option.connectTimeoutMS = 1000
-
-[cms]
-host = 10.96.141.86:27017
-user = xww
-pass = xww
-db   = log
-
-option.connectTimeoutMS = 1000
